--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Shower Presentation Engine</title>
+	<title>Кмпьютерное зрение. История развития</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 	<link rel="stylesheet" href="node_modules/@shower/ribbon/styles/styles.css">
@@ -14,197 +14,512 @@
 <body class="shower list">
 
 	<header class="caption">
-		<h1>Shower Presentation Engine</h1>
-		<p>Yours Truly, Famous Inc.</p>
+		<h1>Кмпьютерное зрение. История развития</h1>
+		<p>Нунгезер И.В. ИУ3-32М</p>
 	</header>
 
-	<section class="slide" id="cover">
-		<h2>Shower Presentation Engine</h2>
-		<p>Brought to you by <a href="https://pepelsbey.net">Vadim Makeev</a></p>
+	<section class="slide" id="title">
+		<h2>Кмпьютерное зрение. <br/> История развития</h2>
+		<p>Нунгезер И.В. ИУ3-32М</p>
 		<figure>
-			<img class="cover" src="pictures/cover.jpg" alt="Hands on the orange typewriter in a park">
-			<figcaption class="copyright right white">
-				<a href="https://fiftyfootshadows.net">© John Carey</a>
-			</figcaption>
+			<img class="cover" src="pictures/titlebg.png">
 		</figure>
 		<style>
-			#cover h2 {
-				margin: 30px 0 0;
-				color: white;
-				text-align: center;
-				font-size: 70px;
+			#title h2 {
+				margin: 120px 420px 0;
+				color: #17406D;
+				text-align: left;
+				font-size: 50px;
+				white-space: nowrap;
 			}
 
-			#cover p {
-				margin: 10px 0 0;
-				text-align: center;
-				color: white;
+			#title p {
+				margin: 10px 420px 0;
+				text-align: left;
+				color: #17406D;
 				font-style: italic;
 				font-size: 20px;
-			}
-
-			#cover p a {
-				color: white;
+				white-space: nowrap;
 			}
 		</style>
 	</section>
 
-	<section class="slide">
-		<h2>Shower key features</h2>
-		<ol>
-			<li>Built on HTML, CSS and JavaScript</li>
-			<li>Works in all modern browsers</li>
-			<li>Themes are separated from engine</li>
-			<li>Fully keyboard accessible</li>
-			<li>Printable to PDF</li>
-		</ol>
-		<p class="note">Shower ['ʃəuə] noun. A person or thing that shows.</p>
+	<section class="slide" id="slide5060">
+		<h2>Ранние начала (50-60е)</h2>
+		<p>Фрэнк Розенблатт – «Принципы нейродинамики: Перцептроны и теория механизмов мозга»</p>
+		<p style="position: fixed; bottom: 10px; left: 100px;">Нунгезер Илья Вячеславович, ИУ3-32М, Вариант 3</p>
+		<figure>
+			<img class="cover" src="pictures/slidebg.png">
+		</figure>
+
+		<figure>
+			<img id="rozenblatt" src="pictures/rozenblatt.jpg">
+		</figure>
+
+		<figure>
+			<img id="principals" src="pictures/principals.jpg">
+		</figure>
+
+		<figure>
+			<img id="perceptronidea" src="pictures/perceptronidea.jpg">
+		</figure>
+
+		<style>
+			#slide5060 h2 {
+				margin: 10px 0 0 40px;
+				color: #17406D;
+				font-size: 50px;
+			}
+			#slide5060 p {
+				margin: 290px 300px 0 40px;
+				color: #17406D;
+				font-size: 20px;
+			}
+			#rozenblatt {
+				position: absolute;
+				top: 170px;
+				left: 650px;
+				width: 300px;
+				height: auto;
+			}
+			#principals {
+				position: absolute;
+				top: 170px;
+				left: 440px;
+				width: 200px;
+				height: auto;
+			}
+			#perceptronidea {
+				position: absolute;
+				top: 170px;
+				left: 140px;
+				width: 300px;
+				height: auto;
+			}
+		</style>
 	</section>
 
-	<section class="slide">
-		<h2>Plain text on your slides</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur <a href="#4">adipisicing</a> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <em>quis nostrud</em> exercitation ullamco laboris <strong>nisi ut aliquip</strong> ex ea commodo consequat. Duis aute irure <i>dolor</i> in reprehenderit in voluptate velit esse cillum <b>dolore</b> eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in <code>&lt;culpa&gt;</code> qui officia deserunt mollit anim id est laborum.</p>
+	<section class="slide" id="slide7080">
+		<h2>Детекторы краёв и извлечение признаков (70-80е)</h2>
+		<p style="position: fixed; top: 180px; left: 540px;">Детекторы краёв. Преобразование Хафа.</p>
+		<figure>
+			<img class="cover" src="pictures/slidebg.png">
+		</figure>
+		<p style="position: fixed; bottom: 10px; left: 100px;">Нунгезер Илья Вячеславович, ИУ3-32М, Вариант 3</p>
+
+		<figure>
+			<img id="huff" src="pictures/huff.jpg">
+		</figure>
+
+		<figure>
+			<img style="position: absolute; top: 70px; left: 140px; width: 200px; height: auto;" src="pictures/edres.png">
+		</figure>
+
+		<figure>
+			<img style="position: absolute; top: 70px; left: 350px; width: 200px; height: auto;" src="pictures/edsrc.png">
+		</figure>
+
+		<style>
+			#slide7080 h2 {
+				margin: 180px 240px 0 40px;
+				color: #17406D;
+				font-size: 50px;
+			}
+			#slide7080 p {
+				margin: 10px 80px 0 40px;
+				color: #17406D;
+				font-size: 20px;
+			}
+			#huff {
+				position: absolute;
+				top: 240px;
+				left: 560px;
+				width: 400px;
+				height: auto;
+			}
+		</style>
 	</section>
 
-	<section class="slide">
-		<h2>Two columns if you like</h2>
-		<div class="columns two">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-			<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
+	<section class="slide" id="slide8090">
+		<div style="background-color: rgba(255, 255, 255, 0.4); position: absolute; top: 30px; width: 760px; height: 100px">
+			<h2>Распознавание объектов и машинное <br/> обучение (80-90е)</h2>
 		</div>
-	</section>
 
-	<section class="slide">
-		<h2>All kind of lists</h2>
-		<ol>
-			<li>Simple lists are marked with bullets</li>
-			<li>Ordered lists begin with a number</li>
-			<li>You can even nest lists one inside another
-				<ul>
-					<li>Or mix their types</li>
-					<li>But do not go too far</li>
-					<li>Otherwise audience will be bored</li>
-				</ul>
-			</li>
-			<li>Look, seven rows exactly!</li>
-		</ol>
-	</section>
+		<div style="background-color: rgba(255, 255, 255, 0.4); position: absolute; left: 400px; top: 330px; width: 460px; height: 190px">
+			<ul>
+				<li>Машинное обучение</li>
+				<li>Алгоритм SIFT</li>
+			</ul>
+		</div>
 
-	<section class="slide">
-		<h2>Serious citations</h2>
 		<figure>
-			<blockquote>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
-			</blockquote>
-			<figcaption>Marcus Tullius Cicero</figcaption>
+			<img class="cover" src="pictures/siftbg.png">
 		</figure>
-	</section>
 
-	<section class="slide">
-		<h2>Code samples</h2>
-		<pre>
-			<code>&lt;!DOCTYPE html&gt;</code>
-			<code class="mark">&lt;html lang="en"&gt;</code>
-			<code><mark>&lt;head&gt;</mark> <span class="comment">&lt;!--Comment--&gt;</span></code>
-			<code>	&lt;title&gt;Shower&lt;/title&gt;</code>
-			<code>	&lt;meta charset="<mark class="important">UTF-8</mark>"&gt;</code>
-			<code>	&lt;link rel="stylesheet" href="screen.css"&gt;</code>
-			<code><mark>&lt;/head&gt;</mark></code>
-		</pre>
-	</section>
+		<div style="background-color: rgba(255, 255, 255, 0.4); position: absolute; left: 100px; bottom: 15px; width: 760px; height: 30px">
+			<p style="position: fixed; bottom: 10px; left: 100px;">Нунгезер Илья Вячеславович, ИУ3-32М, Вариант 3</p>
+		</div>
 
-	<section class="slide">
-		<h2>Even tables</h2>
-		<table>
-		<tr>
-			<th scope="col">Locavore</th>
-			<th>Umami</th>
-			<th>Helvetica</th>
-			<th>Vegan</th>
-		</tr>
-		<tr>
-			<th scope="row">Fingerstache</th>
-			<td>Kale</td>
-			<td>Chips</td>
-			<td>Keytar</td>
-		</tr>
-		<tr>
-			<th scope="row">Sriracha</th>
-			<td>Gluten-free</td>
-			<td>Ennui</td>
-			<td>Keffiyeh</td>
-		</tr>
-		<tr>
-			<th scope="row">Thundercats</th>
-			<td>Jean</td>
-			<td>Shorts</td>
-			<td>Biodiesel</td>
-		</tr>
-		<tr>
-			<th scope="row">Terry</th>
-			<td>Richardson</td>
-			<td>Swag</td>
-			<td>Blog</td>
-		</tr>
-		</table>
-		<p>It’s good to have information organized.</p>
-	</section>
-
-	<section class="slide" id="picture">
-		<h2>Pictures</h2>
 		<figure>
-			<img class="cover" src="pictures/picture.jpg" alt="Orange typewriter on a wooden table close-up">
-			<figcaption class="copyright right white">
-				<a href="https://fiftyfootshadows.net">© John Carey</a>
-			</figcaption>
+			<img style="position: absolute; top: 150px; left: 100px; width: auto; height: 370px;" src="pictures/sift1.jpg">
 		</figure>
+
+		<figure>
+			<img style="position: absolute; top: 150px; left: 400px; width: 460px; height: auto" src="pictures/sift2.jpg">
+		</figure>
+
 		<style>
-			#picture h2 {
+			#slide8090 h2 {
+				margin: 10px 0 0 40px;
+				text-align: left;
+				white-space: nowrap;
+				color: #002060;
+				font-size: 40px;
+			}
+			#slide8090 p {
+				margin: 10px 0 0 40px;
+				color: #002060;
+				font-size: 20px;
+			}
+			#slide8090 ul {
+				margin: 10px 0 0 40px;
+				color: #002060;
+				font-size: 20px;
+			}
+		</style>
+	</section>
+
+	<section class="slide" id="slide2000">
+		<h2 style="position: fixed; top: 290px; left: 100px;">Метод опорных векторов и алгоритм Виолы-Джонсона (2000е)</h2>
+		<ul style="position: fixed; top: 290px; left: 520px;">
+			<li>Метод опорных векторов</li>
+			<li>AdaBoost и алгоритм Виолы-Джонсона (каскад Хаара)</li>
+		</ul>
+		<figure>
+			<img class="cover" src="pictures/slidebg.png">
+		</figure>
+		<p style="position: fixed; bottom: 10px; left: 100px;">Нунгезер Илья Вячеславович, ИУ3-32М, Вариант 3</p>
+
+		<figure>
+			<img style="position: absolute; top: 70px; left: 130px; width: 320px; height: auto" src="pictures/haar.png">
+		</figure>
+
+		<figure>
+			<img style="position: absolute; top: 80px; left: 480px; width: 380px; height: auto" src="pictures/svm.svg">
+		</figure>
+
+		<style>
+			#slide2000 h2 {
+				margin: 10px 500px 0 40px;
+				color: #17406D;
+				font-size: 50px;
+			}
+			#slide2000 p {
+				margin: 10px 0 0 40px;
+				color: #17406D;
+				font-size: 20px;
+			}
+			#slide2000 ul {
+				margin: 10px 0 0 40px;
+				color: #17406D;
+				font-size: 20px;
+			}
+		</style>
+	</section>
+
+	<section class="slide" id="slide0010">
+		<div style="background-color: rgba(255, 255, 255, 0.4); position: absolute; top: 30px; width: 760px; height: 100px">
+			<h2>Глубокое обучение (2000-2010е)</h2>
+		</div>
+
+		<div style="background-color: rgba(255, 255, 255, 0.4); position: absolute; left: 100px; top: 150px; width: 320px; height: 140px">
+			<ul>
+				<li>ImageNet</li>
+				<li>Свёрточные нейронные сети: AlexNet, VGGNet, ResNet</li>
+			</ul>
+		</div>
+
+		<figure>
+			<img class="cover" src="pictures/deeplearningbg.jpg">
+		</figure>
+
+		<div style="background-color: rgba(255, 255, 255, 0.4); position: absolute; left: 100px; bottom: 15px; width: 760px; height: 30px">
+			<p style="position: fixed; bottom: 10px; left: 100px;">Нунгезер Илья Вячеславович, ИУ3-32М, Вариант 3</p>
+		</div>
+
+		<figure>
+			<img style="position: absolute; top: 150px; left: 440px; width: 420px; height: auto" src="pictures/cnn.jpg">
+		</figure>
+
+		<style>
+			#slide0010 h2 {
+				margin: 10px 0 0 40px;
+				color: #002060;
+				font-size: 50px;
+			}
+			#slide0010 p {
+				margin: 10px 0 0 40px;
+				color: #002060;
+				font-size: 20px;
+			}
+			#slide0010 ul {
+				margin: 10px 0 0 40px;
+				color: #002060;
+				font-size: 20px;
+			}
+		</style>
+	</section>
+
+	<section class="slide" id="slide2010">
+		<div style="background-color: rgba(255, 255, 255, 0.4); position: absolute; left: 520px; top: 130px; width: 340px; height: 150px">
+			<h2>Развитие глубокого обучения (2010е-наше время)</h2>
+		</div>
+
+		<div style="background-color: rgba(255, 255, 255, 0.4); position: absolute; left: 520px; top: 295px; width: 340px; height: 220px">
+			<ul>
+				<li>Настройка предобученных нейронных сетей</li>
+				<li>Генеративные модели</li>
+				<li>Адаптация вычислительных устройств</li>
+			</ul>
+		</div>
+
+		<figure>
+			<img class="cover" src="pictures/dldevelopmentbg.png">
+		</figure>
+
+		<figure>
+			<img style="position: absolute; top: 90px; left: 200px; width: 270px; height: auto" src="pictures/nvidia.png">
+		</figure>
+
+		<figure>
+			<img style="position: absolute; top: 295px; left: 100px; width: 405px; height: auto; opacity: 0.9" src="pictures/ship.jpg">
+		</figure>
+
+		<div style="background-color: rgba(255, 255, 255, 0.4); position: absolute; left: 100px; bottom: 15px; width: 760px; height: 30px">
+			<p style="position: fixed; bottom: 10px; left: 100px;">Нунгезер Илья Вячеславович, ИУ3-32М, Вариант 3</p>
+		</div>
+
+		<style>
+			#slide2010 h2 {
+				margin: 10px 0 0 40px;
+				color: #002060;
+				font-size: 40px;
+			}
+			#slide2010 p {
+				margin: 10px 0 0 40px;
+				color: #002060;
+				font-size: 20px;
+			}
+			#slide2010 ul {
+				margin: 10px 0 0 40px;
+				color: #002060;
+				font-size: 20px;
+			}
+		</style>
+	</section>
+
+	<section class="slide" id="slide-app">
+		<h2>Современное применение</h2>
+
+		<div class="table">
+			<div class="row">
+				<div class="item">
+					<img class="item-img" src="pictures/list1.png">
+					<p class="item-text">Системы управления процессами</p>
+				</div>
+				<div class="item">
+					<img class="item-img" src="pictures/list2.png">
+					<p class="item-text">Системы видеонаблюдения</p>
+				</div>
+				<div class="item">
+					<img class="item-img" src="pictures/list3.png">
+					<p class="item-text">Системы организации информации</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="item">
+					<img class="item-img" src="pictures/list4.png">
+					<p class="item-text">Системы моделирования объектов или окружающей среды</p>
+				</div>
+				<div class="item">
+					<img class="item-img" src="pictures/list5.png">
+					<p class="item-text">Системы человеко-машинного взаимодействия</p>
+				</div>
+				<div class="item">
+					<img class="item-img" src="pictures/list6.png">
+					<p class="item-text">Системы дополненной реальности</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="item">
+					<img class="item-img" src="pictures/list7.png">
+					<p class="item-text">Вычислительная фотография</p>
+				</div>
+			</div>
+		</div>
+
+		<p style="position: fixed; bottom: 10px; left: 100px;">Нунгезер Илья Вячеславович, ИУ3-32М, Вариант 3</p>
+
+		<figure>
+			<img class="cover" src="pictures/slidebg.png">
+		</figure>
+
+		<style>
+			#slide-app h2 {
+				margin: 10px 0 0 40px;
+				color: #17406D;
+				font-size: 50px;
+			}
+			#slide-app p {
+				margin: 10px 0 0 40px;
+				color: #17406D;
+				font-size: 20px;
+			}
+			#slide-app .table{
+				position: fixed;
+				top: 170px;
+				left: 140px;
+				display: grid;
+				grid-template-columns: repeat(3, auto);
+			}
+			#slide-app .row{
+				width: 100%;
+				height: auto;
+			}
+			#slide-app .item{
+				display: flex;
+				padding: 20px;
+				width: 240px;
+				height: 60px;
+				margin: 0 auto;
+			}
+			#slide-app .item-img{
+				width: auto;
+				height: auto;
+			}
+			#slide-app .item-text{
+				margin: auto auto auto 10px;
+				line-height: 16px;
+				color: #17406D;
+				font-size: 12px;
+			}
+		</style>
+	</section>
+
+	<section class="slide" id="slide-auto">
+		<h2 style="position: fixed; top: 130px; left: 100px;">Применение компьютерного зрения в регистрации автомобильных номеров</h2>
+
+		<figure>
+			<img style="position: absolute; top: 130px; left: 480px; width: 450px; height: auto" src="pictures/autostats.png">
+		</figure>
+
+		<p style="position: fixed; bottom: 10px; left: 100px;">Нунгезер Илья Вячеславович, ИУ3-32М, Вариант 3</p>
+
+		<figure>
+			<img class="cover" style="filter: brightness(0.8)" src="pictures/autobg.jpg">
+		</figure>
+
+		<style>
+			#slide-auto h2 {
+				margin: 10px 540px 0 40px;
 				color: white;
+				font-size: 50px;
+			}
+			#slide-auto p {
+				margin: 10px 0 0 40px;
+				color: white;
+				font-size: 20px;
 			}
 		</style>
 	</section>
 
-	<section class="slide">
-		<h2 class="shout shrink">You can even shout this way</h2>
-	</section>
+	<section class="slide" id="slide-perspective">
+		<h2>Перспективы</h2>
+		<p>Источник: Statista Market Insights</p>
 
-	<section class="slide">
-		<h2>Inner navigation</h2>
-		<ol>
-			<li>Lets you reveal list items one by one</li>
-			<li class="next">To keep some key points</li>
-			<li class="next">In secret from audience</li>
-			<li class="next">But it will work only once</li>
-			<li class="next">Nobody wants to see the same joke twice</li>
-		</ol>
-	</section>
+		<figure>
+			<img style="position: absolute; top: 130px; left: 480px; width: 450px; height: auto" src="pictures/cvmarketstats.jpg">
+		</figure>
 
-	<section class="slide" id="see-more">
-		<h2 class="shout">
-			<img src="pictures/logo.svg" alt="Shower logo">
-			<a href="https://github.com/shower/shower">See more on GitHub</a>
-		</h2>
+		<p style="position: fixed; bottom: 10px; left: 100px;">Нунгезер Илья Вячеславович, ИУ3-32М, Вариант 3</p>
+
+		<figure>
+			<img class="cover" src="pictures/slidebg.png">
+		</figure>
+
 		<style>
-			#see-more h2 {
-				font-size: 100px
+			#slide-perspective h2 {
+				margin: 10px 0 0 40px;
+				color: #17406D;
+				font-size: 50px;
 			}
-
-			#see-more img {
-				width: 0.72em;
-				height: 0.72em;
+			#slide-perspective p {
+				margin: 10px 0 0 40px;
+				color: #17406D;
+				font-size: 20px;
 			}
 		</style>
 	</section>
 
-	<footer class="badge">
-		<a href="https://github.com/shower/shower">Fork me on GitHub</a>
-	</footer>
+	<section class="slide" id="slide-video">
+		<h2>Дополнительное задание (видео и аудио)</h2>
+
+		<video style="position:absolute; top: 170px; left: 140px; width:320px; height: 240px;" controls preload="none">
+			<source src="/videos/Touhou%20-%20Bad%20Apple.mp4" type="video/mp4" />
+			Your browser does not support the video tag.
+		</video>
+
+		<audio
+			style="position: absolute; top: 170px; left: 500px; width:400px; height: 40px"
+			className='audio' controls
+			src="/audio/Дельта%20альфа%20альфа%20штрих%20%20МФТИ.mp3">
+			Your browser does not support the
+			<code>audio</code> element.
+		</audio>
+
+
+		<p style="position: fixed; bottom: 10px; left: 100px;">Нунгезер Илья Вячеславович, ИУ3-32М, Вариант 3</p>
+		<figure>
+			<img class="cover" src="pictures/slidebg.png">
+		</figure>
+		<style>
+			#slide-video h2 {
+				margin: 10px 0 0 40px;
+				color: #17406D;
+				font-size: 50px;
+			}
+			#slide-video p {
+				margin: 10px 0 0 40px;
+				color: #17406D;
+				font-size: 20px;
+			}
+		</style>
+	</section>
+
+	<section class="slide" id="slide-end">
+		<h2>Спасибо за внимание</h2>
+		<p style="position: fixed; bottom: 10px; left: 100px;">Нунгезер Илья Вячеславович, ИУ3-32М, Вариант 3</p>
+		<figure>
+			<img class="cover" src="pictures/endbg.png">
+		</figure>
+		<style>
+			#slide-end h2 {
+				margin: 180px auto;
+				text-align: center;
+				color: #17406D;
+				font-size: 50px;
+			}
+			#slide-end p {
+				margin: 10px 0 0 40px;
+				color: #17406D;
+				font-size: 20px;
+			}
+		</style>
+	</section>
 
 	<div class="progress"></div>
 
 	<script src="node_modules/@shower/core/dist/shower.js"></script>
-	<!-- Copyright © 3000 Yours Truly, Famous Inc. -->
 
 </body>
 </html>
