--- a/index.html
+++ b/index.html
@@ -465,14 +465,14 @@
 		<h2>Дополнительное задание (видео и аудио)</h2>
 
 		<video style="position:absolute; top: 170px; left: 140px; width:320px; height: 240px;" controls preload="none">
-			<source src="/videos/Touhou%20-%20Bad%20Apple.mp4" type="video/mp4" />
+			<source src="videos/Touhou%20-%20Bad%20Apple.mp4" type="video/mp4" />
 			Your browser does not support the video tag.
 		</video>
 
 		<audio
 			style="position: absolute; top: 170px; left: 500px; width:400px; height: 40px"
 			className='audio' controls
-			src="/audio/Дельта%20альфа%20альфа%20штрих%20%20МФТИ.mp3">
+			src="audio/Дельта%20альфа%20альфа%20штрих%20%20МФТИ.mp3">
 			Your browser does not support the
 			<code>audio</code> element.
 		</audio>
