--- a/index.html
+++ b/index.html
@@ -464,15 +464,15 @@
 	<section class="slide" id="slide-video">
 		<h2>Дополнительное задание (видео и аудио)</h2>
 
-		<video style="position:absolute; top: 170px; left: 140px; width:320px; height: 240px;" controls preload="none">
-			<source src="/videos/Touhou%20-%20Bad%20Apple.mp4" type="video/mp4" />
+		<video style="position:absolute; top: 170px; left: 140px; width:320px; height: 240px;" controls>
+			<source src="https://github.com/Frosty726/CV_Prez/raw/refs/heads/main/videos/Touhou%20-%20Bad%20Apple.mp4" type="video/mp4" />
 			Your browser does not support the video tag.
 		</video>
 
 		<audio
 			style="position: absolute; top: 170px; left: 500px; width:400px; height: 40px"
 			className='audio' controls
-			src="/audio/Дельта%20альфа%20альфа%20штрих%20%20МФТИ.mp3">
+			src="https://github.com/Frosty726/CV_Prez/raw/refs/heads/main/audio/%D0%94%D0%B5%D0%BB%D1%8C%D1%82%D0%B0%20%D0%B0%D0%BB%D1%8C%D1%84%D0%B0%20%D0%B0%D0%BB%D1%8C%D1%84%D0%B0%20%D1%88%D1%82%D1%80%D0%B8%D1%85%20%20%D0%9C%D0%A4%D0%A2%D0%98.mp3">
 			Your browser does not support the
 			<code>audio</code> element.
 		</audio>
